--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.15",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
-    "vue": "^2.5.11",
+    "vue": "^2.6.9",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0"
   },
@@ -40,7 +41,7 @@
     "node-sass": "^4.11.0",
     "sass-loader": "^6.0.7",
     "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
+    "vue-template-compiler": "^2.6.9",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
   }
