--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "test": "mocha-webpack NODE_ENV=test --webpack-config webpack.config.js --require test/setup.js test/**/*.spec.js",
     "gc": "node ./src/utils/createComponent.js"
   },
   "dependencies": {
@@ -28,6 +29,7 @@
   ],
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.7.2",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
@@ -35,14 +37,22 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "chai": "^4.2.0",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "expect": "^24.5.0",
     "file-loader": "^1.1.4",
+    "jsdom": "^14.0.0",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^6.0.2",
+    "mocha-webpack": "^1.1.0",
     "node-sass": "^4.11.0",
+    "prettier": "1.14.0",
     "sass-loader": "^6.0.7",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.6.9",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack-dev-server": "^2.9.1",
+    "webpack-node-externals": "^1.7.2"
   }
 }
