--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 language: node_js
 node_js:
   - "stable"
-cache:
-  directories:
-  - node_modules
-install: npm install
+before_script: npm install
 script:
   - npm test
   - npm run build
