--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "chai": "^4.2.0",
+    "clean-webpack-plugin": "^2.0.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "expect": "^24.5.0",
     "file-loader": "^1.1.4",
+    "html-webpack-plugin": "^3.2.0",
     "jsdom": "^14.0.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^6.0.2",
