--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "author": "Alex Dudescu",
   "license": "MIT",
   "private": true,
+  "homepage": "https://alex-dudescu.github.io/LearningVue",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "test": "mocha-webpack NODE_ENV=test --webpack-config webpack.config.js --require test/setup.js test/**/*.spec.js",
+    "deploy": "cross-env NODE_ENV=ghpages webpack --progress --hide-modules && gh-pages -d dist",
     "gc": "node ./src/utils/createComponent.js"
   },
   "dependencies": {
@@ -43,6 +45,7 @@
     "css-loader": "^0.28.7",
     "expect": "^24.5.0",
     "file-loader": "^1.1.4",
+    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jsdom": "^14.0.0",
     "jsdom-global": "^3.0.2",
