--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
-language: node_js
+language: 
+  node_js
 node_js:
-  - "stable"
-before_script: npm install
+  - "stable" 
+install:
+  - npm install
+  - npm install -g codecov
+  - npm intsall -g istanbul
 script:
+  - istanbul cover ./node_modules/mocha/bin/_mocha --reporter lcovonly -- -R spec
+  - codecov
   - npm test
