--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "blanket": "^1.2.3",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^2.0.1",
     "cross-env": "^5.0.5",
@@ -59,5 +60,10 @@
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-node-externals": "^1.7.2"
+  },
+  "config": {
+    "blanket": {
+      "data-cover-never": [ "node_modules", "tests" ]
+    }
   }
 }
