--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 install:
   - npm install
   - npm install -g codecov
-  - npm intsall -g istanbul
+  - npm install -g istanbul
 script:
   - istanbul cover ./node_modules/mocha/bin/_mocha --reporter lcovonly -- -R spec
   - codecov
